[workspace]
resolver = "2"
members = [
    "links",
    "constellation",
    "jetstream",
    "ufos",
    "ufos/fuzz",
    "spacedust",
    "who-am-i",
    "slingshot",
    "quasar",
    "pocket",
    "reflector",
]

[workspace.dependencies]
clap = { version = "4.5.56", features = ["derive", "env"] }
